# osdev-rs

./: .gitignore  Cargo.toml  README.md  justfile  x86_64-osdev.json
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  linked_list.rs
tests/: basic_boot.rs  basic_interrupt.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
