[package]
name = "osdev"
version = "0.1.0"
edition = "2024"

# [profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "osdev"
test = true 
bench = false

[dependencies]
bootloader = { version = "0.9", features =['map_physical_memory']}
linked_list_allocator = "0.9.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


############################# tests
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
	"-display", "none"
]
test-timeout = 300
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
